# talks

./: .gitignore  README.md  build-beamer.sh  build-revealjs.sh  cabal.project
bitcoin-development/: slides.md
drivechain/: build.sh  slides.md
lambda-calculus/: README.md  lib.mjs  slides.md  workspace.mjs
polysemy/: CHANGELOG.md  LICENSE  README.md  build-slides.sh  build.sh  cabal.project  polysemy-talk.cabal  slides.md
polysemy/game-0/: Main.hs
polysemy/game-1/: Main.hs
polysemy/game-2/: Main.hs
st-monad/: Examples.hs  run.sh  slides.org
taproot/: build.sh  slides.md
