cabal-version:       2.4
name:                polysemy-talk
version:             1.0.0
synopsis:            An example project using polysemy
license:             ISC
license-file:        LICENSE
author:              Ian Shipman
maintainer:          ics@gambolingpangolin.com
build-type:          Simple
extra-source-files:
    CHANGELOG.md
    README.md
    slides.md

common exec
  default-language:    Haskell2010
  build-depends:
      base      >=4.12 && <4.13
    , random    >=1.1  && <1.2

executable guessing-game-mark-0
  import:           exec
  main-is:          Main.hs
  hs-source-dirs:   game-0/

executable guessing-game-mark-1
  import:           exec
  main-is:          Main.hs
  hs-source-dirs:   game-1/

  build-depends:
    polysemy        >=1.0   && <1.3

executable guessing-game-mark-2
  import:           exec
  main-is:          Main.hs
  hs-source-dirs:   game-2/

  build-depends:
    polysemy        >=1.0   && <1.3
